# multi-module-cmake-example

./: .gitignore  CMakeLists.txt
dynamic-library/: CMakeLists.txt  library.cpp
hello-service/: CMakeLists.txt
hello-service/src/: main.cpp
include/: library.h
src/: main.cpp
static-library/: CMakeLists.txt  library.cpp
